[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm", "vectortiles"]
license = "AGPL-3.0"
name = "iompair"
version = "0.3.0"

[dependencies]
clap = "*"
hyper = "0.8"
iron = "*"
regex = "0.1"
router = "*"
rustc-serialize = "*"
simple_parallel = "*"
"chrono" = "0.2"

[dependencies.iter-progress]
path = "../iter-progress/"

[dependencies.slippy-map-tiles]
path = "../slippy-map-tiles/"

[dependencies.tilejson]
path = "../tilejson/"
