[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm", "vectortiles"]
license = "GPL-3.0+"
name = "iompair"
version = "0.5.0"

[dependencies]
chrono = "0.2"
clap = "*"
hyper = "0.9"
regex = "0.1"
rustc-serialize = "*"
simple_parallel = "*"
slippy-map-tiles = "0.7"
iter-progress = "0.3"
